@@ -1,3 +1,9 @@
+Thu Aug  5 07:40:00 UTC 2010  Build CZar  <buildczar at prismtech dot com>
+
+        * ace/OS_NS_Thread.cpp:
+          Add the missing ; to the lines added by the fix below.
+          Wed Aug  4 14:16:46 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
 Wed Aug  4 17:21:17 UTC 2010  Chris Cleeland  <cleeland@ociweb.com>
 
         * bin/MakeProjectCreator/config/crosscompile.mpb:
